remove explicit MAVEN_OPTS and -Dmaven.repo.local in run_test